src/uniandes/lym/parserJavaCC/exprParser/ExprParser2.jj
	/**
 * JavaCC template file created by SF JavaCC plugin 1.5.17+ wizard for JavaCC 1.5.0+
*/



options {
  IGNORE_CASE = true;
  STATIC = false;
}

PARSER_BEGIN(ExprParser)
package uniandes.lym.parserJavaCC.exprParser;
import java.util.*;
 

public class ExprParser
{





}




PARSER_END(ExprParser)

SKIP :
{
  " "
| "\r" 
| "\t"
| "\n"
}




TOKEN :
{
  <INT : (< DIGIT >)+ >
|  < HEXA: "#"(< DIGIT >)+ >
| < #DIGIT : [ "0"-"9" ] >
| < VAR : "$"([ "0"-"9" ]) <DIGIT > > // a variable $dm where d in { 0,1 }  m in (0..9)  we only have 20 variables
| < WRITE: "write" >
}
int one_line() :
{int pos=0;}
{
  


  
// reads assignments and write statements. Should end with "end"
//  for example:
//     $01 = 1;
//     $02 = -$01 + 8;
//     write $01;
//     write $02;
//    end
//  ";" is part of the instruction or write statement



      ( pos = variable()"=" exp() ";" 
      |
      <WRITE>  pos =variable() ";" // used to print variable values
    )*
  "end"
  {
    return 0;
  }
    
}

void exp() :
{
  }
{
// Parses  E -> E + T
//         E -> E - T
//         E -> T
//   in EBNF:  E -> T {+ T   | - T }
  
 term() ( "+"term() 
          | "-" term()  
         )*
}
void term() :
{
}
{
// Parses  T -> T * F
//         T -> T / F
//         T -> F
//   in EBNF:  T -> F {* F   | /  F }
  
 fact() ( "*"  fact()    
 | "/" fact()
  

 )*
}
void fact() :
{
// Parses  F -> B
//         F -> -F
//         B -> num
//         B -> '(' E ')'
//         B -> var
//   in EBNF:  F -> -F  |  (var |num |'(' E ')')
//   we don't remove right recursion


int  v,pos;
 
}
{

   "-"  fact() 
   |  pos=variable() 
   | v=num() 
   |  "("exp() ")"
                             
}


int num() throws Error:
{	
	int total=-9999;
	Token token;
}

{
	(token=<INT>)

	{ 
		try {
			total = Integer.valueOf(token.image);
		} 
		catch (NumberFormatException ee) 
		{
			throw new Error("Number too large: "+token.image);
		}
		return total;
     }
     
       
}


int variable() throws Error:
{	
	int pos,total=1;
	Token token;
}

{
	(token=<VAR>)

	  
{
  // returns an int corresponding to the variable's name  0 for $00, 1 for $01.... 17 for $17..
  //  upto  19 for $19. We only have 20 variables.  
         pos = (token.image.charAt(1)-'0')*10 + (token.image.charAt(2)-'0');
         if (pos > 19)throw new Error("Variable does not exist:  "+ token.image);
         return pos;
         
}   
}


































